--- a/index.html
+++ b/index.html
@@ -42,44 +42,44 @@
             <ul class="boards" active>
                 <div class="links">
                     <li>
-                        <h1>Fun</h1>
-                        <a href="https://4chan.org/a/">/a/</a>
-                        <a href="https://4chan.org/lit/">/lit/</a>
-                        <a href="https://4chan.org/jp/">/jp/</a>
-                        <a href="https://4chan.org/r9k/">/r9k/</a>
+                        <h1>Social</h1>
+                        <a href="https://discord.com">discord</a>
+                        <a href="https://youtube.com">youtube</a>
+                        <a href="https://reddit.com/">reddit</a>
                         <a href="https://www.4chan.org/wg/">/wg/</a>
+                        <a href="https://twitch.tv">twitch</a>
                     </li>
                     <li>
-                        <h1>Comfy</h1>
-                        <a href="https://sushigirl.us/kawaii/">/kawaii/</a>
-                        <a href="https://sushigirl.us/lounge/">/lounge/</a>
-                        <a href="https://www.4chan.org/wsg/">/wsg/</a>
+                        <h1>Study</h1>
+                        <a href="https://my.cqu.edu.au/login">mycqu</a>
+                        <a href="https://moodle.cqu.edu.au/my/">moodle</a>
+                        <a href="https://docs.microsoft.com/en-us/learn/">microlearn</a>
+                        <a href="https://drive.google.com/drive/u/0/my-drive">gdocs</a>
+                        <a href="https://mail.google.com/mail/u/0/#inbox/">email</a>
                     </li>
                     <li>
-                        <h1>Technology</h1>
-                        <a href="https://4chan.org/g/">/g/</a>
-                        <a href="https://www.lainchan.org/lambda/">/λ/</a>
-                        <a href="https://www.lainchan.org/sec/">/sec/</a>
-                        <a href="https://boards.420chan.org/prog/">/prog/</a>
-                        <a href="https://8ch.net/g/">/8g/</a>
+                        <h1>Work</h1>
+                        <a href="https://admin.microsoft.com/#/homepage/">portal</a>
+                        <a href="https://aad.portal.azure.com/">azure</a>
+                        <a href="https://outlook.office365.com/mail/inbox/">OWA</a>
+                        <a href="https://evolutionsecuritynswptyltd-admin.sharepoint.com/_layouts/15/online/AdminHome.aspx#/siteManagement/view/ALL%20SITES">evo</a>
+                        <a href="https://admin.onedrive.com/">oned</a>
                     </li>
                 </div>
             </ul>
             <ul class="music">
                 <div class="links">
-                    <li><a href="https://soundcloud.com/">soundcloud</a></li>
-                    <li><a href="http://lolicore.org/">lolicore</a></li>
-                    <li><a href="https://www.youtube.com/playlist?list=FLdYG2Q_1DDrt0PoeoRicihw">y-playlist</a></li>
-                    <li><a href="https://lainchan.org/music/res/898.html">/music/</a></li>
+                    <li><a href="https://open.spotify.com/">spotify</a></li>
+                    <li><a href="https://music.youtube.com/">yt-music</a></li>
+                    <li><a href="https://soundcloud.com">soundcloud</a></li>
                 </div>
             </ul>
             <ul class="tech">
                 <div class="links">
-                    <li><a href="https://arisuchan.jp/">arisuchan</a></li>
-                    <li><a href="https://systemspace.link/">つき</a></li>
-                    <li><a href="https://docs.racket-lang.org/">racket</a></li>
+                    <li><a href="https://distrohub.com">distrohub</a></li>
+                    <li><a href="https://sharepointmaven.com/">maven</a></li>
                     <li><a href="https://stallman.org/">stallman</a></li>
-                    <li><a href="http://afternoon.dynu.com/letterbox.html">post office</a></li>
+                    <li><a href="https://staticice.com.au/">staticice</a></li>
                 </div>
             </ul>
         </div>
