--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </cols>
         </div>
         <div id="panels">
-            <ul class="boards" active>
+            <ul class="Main" active>
                 <div class="links">
                     <li>
                         <h1>Social</h1>
@@ -67,14 +67,14 @@
                     </li>
                 </div>
             </ul>
-            <ul class="music">
+            <ul class="Music">
                 <div class="links">
                     <li><a href="https://open.spotify.com/">spotify</a></li>
                     <li><a href="https://music.youtube.com/">yt-music</a></li>
                     <li><a href="https://soundcloud.com">soundcloud</a></li>
                 </div>
             </ul>
-            <ul class="tech">
+            <ul class="Tech">
                 <div class="links">
                     <li><a href="https://distrohub.com">distrohub</a></li>
                     <li><a href="https://sharepointmaven.com/">maven</a></li>
