--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <a href="https://reddit.com/">reddit</a>
                         <a href="https://www.4chan.org/wg/">/wg/</a>
                         <a href="https://twitch.tv">twitch</a>
+                        <a href="https://github.com/Sjuundla/">github</a>
                     </li>
                     <li>
                         <h1>Study</h1>
