--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                         <a href="https://youtube.com">youtube</a>
                         <a href="https://reddit.com/">reddit</a>
                         <a href="https://www.4chan.org/wg/">/wg/</a>
-                        <a href="https://twitch.tv">twitch</a>
-                        <a href="https://github.com/Sjuundla/">github</a>
+                        <a href="https://github.com/Sjuundla/dawn/tree/gh-pages/">github</a>
                     </li>
                     <li>
                         <h1>Study</h1>
