--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <li><a href="https://sharepointmaven.com/">maven</a></li>
                     <li><a href="https://stallman.org/">stallman</a></li>
                     <li><a href="https://staticice.com.au/">staticice</a></li>
+                    <li><a href="https://socdoneleft.github.io/stinky_rightwinger_factsheet.html">RD</a></li>
                 </div>
             </ul>
         </div>
