--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <a href="https://reddit.com/">reddit</a>
                         <a href="https://www.4chan.org/wg/">/wg/</a>
                         <a href="https://github.com/Sjuundla/dawn/tree/gh-pages/">github</a>
+                        <a href="https://socdoneleft.github.io/stinky_rightwinger_factsheet.html">SRWS</a>
                     </li>
                     <li>
                         <h1>Study</h1>
