--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <h1>Work</h1>
                         <a href="https://admin.microsoft.com/#/homepage/">portal</a>
                         <a href="https://aad.portal.azure.com/">azure</a>
-                        <a href="https://outlook.office365.com/mail/inbox/">OWA</a>
+                        <a href="https://account.activedirectory.windowsazure.com/UserManagement/MultifactorVerification.aspx?BrandContextID=O365">MFA</a>
                         <a href="https://evolutionsecuritynswptyltd-admin.sharepoint.com/_layouts/15/online/AdminHome.aspx#/siteManagement/view/ALL%20SITES">evo</a>
                         <a href="https://admin.onedrive.com/">oned</a>
                         <a href="https://portal.exclaimer.com/overview/">excl!port</a>
